...
/* =======================================================================
 * Test Tags  (no overlap with ComponentsTestTags which use "comp_*")
 * ======================================================================= */
object SessionCreationTestTags {
  // App bar
  const val SCAFFOLD = "add_session_scaffold"
  const val TOP_APP_BAR = "add_session_top_app_bar"
  const val TOP_APP_BAR_TITLE = "add_session_top_app_bar_title"
  const val NAV_BACK_BTN = "nav_back_btn"

  // Snackbar
  const val SNACKBAR_HOST = "add_session_snackbar_host"

...
